--- a/src/main/resources/public/src/scss/theme/default/_scrollbar.scss
+++ b/src/main/resources/public/src/scss/theme/default/_scrollbar.scss
@@ -119,10 +119,10 @@
 .textarea-scroll-wrapper {
   padding: 0.5rem 0.625rem; // 8px 10px
   display: block;
-  border: 0.0625rem solid $border-color; // 1px
+  border: 0.0625rem solid $element-border-color; // 1px
   border-radius: $element-border-radius;
   color: $element-font-color;
-  background-color: $element-background-color;
+  background-color: $element-bg-color;
   font-size: $element-font-size;
   font-weight: 400;
   resize: vertical;
