--- a/src/main/resources/public/src/scss/theme/proto/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/proto/_variables.scss
@@ -12,7 +12,7 @@ $element-line: $color-line;
 $element-border: 0.0625rem; // 1px
 $element-border-radius: 0.0625rem; // 1px
 $element-font-size: 0.875rem; // 14px
-$element-font-color: $color-text;
+$element-font-color: #67717F;
 
 // Column width
 $column-init: 5rem; // 80px
