--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -105,9 +105,10 @@ input, button, select, optgroup, textarea {
  */
 .underline {
   text-decoration: underline;
+  text-underline-position: under;
 }
 
-.desc {
+.description {
   color: #7E848C;
 }
 
@@ -119,6 +120,12 @@ input, button, select, optgroup, textarea {
 .required::after {
   color: #FF405A;
   content: '\002a';
+}
+
+.text-ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 /* _elements.scss 
@@ -167,6 +174,10 @@ h6 {
   font-size: 0.875rem;
 }
 
+a {
+  cursor: pointer;
+}
+
 a:link,
 a:visited {
   text-decoration: none;
@@ -188,19 +199,19 @@ input {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
-  padding: 0 0 0.625rem 0 0 0.625rem;
+  padding: 0 0.625rem 0 0.625rem;
 }
 
 input::placeholder {
   color: #ACB4BF;
 }
 
-input:focus {
+input:not(:disabled):focus {
   outline: 0;
   border: 0.0625rem solid #0098FF;
 }
 
-input:hover {
+input:not(:disabled):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
@@ -209,8 +220,18 @@ input:hover {
 input:disabled {
   color: #ACB4BF;
   background-color: #F7F8F9;
+  border-color: #EBEBEB;
   pointer-events: none;
   cursor: default;
+}
+
+input.icon {
+  padding-right: 2.5rem;
+}
+
+input.error {
+  color: #FF405A !important;
+  border: 0.0625rem solid #FF405A !important;
 }
 
 input[type=range] {
@@ -250,7 +271,7 @@ textarea {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
-  padding: 0.5rem 0 0.625rem 0.5rem 0 0.625rem;
+  padding: 0.5rem 0.625rem 0.5rem 0.625rem;
   resize: vertical;
 }
 
@@ -258,12 +279,12 @@ textarea::placeholder {
   color: #ACB4BF;
 }
 
-textarea:focus {
+textarea:not(:disabled):focus {
   outline: 0;
   border: 0.0625rem solid #0098FF;
 }
 
-textarea:hover {
+textarea:not(:disabled):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
@@ -276,7 +297,13 @@ textarea:disabled {
   cursor: default;
 }
 
+textarea.error {
+  color: #FF405A !important;
+  border: 0.0625rem solid #FF405A !important;
+}
+
 table {
+  table-layout: fixed;
   border-collapse: collapse;
   border-spacing: 0;
   font-family: inherit;
@@ -284,15 +311,22 @@ table {
   font-weight: 400;
   color: #586872;
   background-color: transparent;
-  border: 0.0625rem solid #EBEBEB;
+  border: 0.0625rem solid transparent;
 }
 
 table tr {
   height: 2.5rem;
 }
 
+table tr th {
+  font-weight: 500;
+}
+
 table tr td, table tr th {
-  border: 0.0625rem solid #EBEBEB;
+  border: 0.0625rem solid transparent;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 select {
@@ -305,15 +339,15 @@ select {
   background-color: #ffffff;
   border: 0.0625rem solid #EBEBEB;
   border-radius: 0.0625rem;
-  padding: 0 0 0.625rem 0 0 0.625rem;
+  padding: 0 0.625rem 0 0.625rem;
 }
 
-select:focus {
+select:not(:disabled):focus {
   outline: 0;
   border: 0.0625rem solid #0098FF;
 }
 
-select:hover {
+select:not(:disabled):hover {
   outline: 0;
   border: 0.0625rem solid #0098FF;
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
@@ -326,8 +360,29 @@ select:disabled {
   cursor: default;
 }
 
+option:hover {
+  background-color: rgba(0, 152, 255, 0.08);
+}
+
+option:visited {
+  color: #0098FF;
+  background-color: #ffffff;
+}
+
+option:active, option:focus {
+  color: #0098FF;
+}
+
 span {
+  font-family: inherit;
   margin: auto 0;
+}
+
+label {
+  font-family: inherit;
+  color: #3F4B56;
+  font-size: 1rem;
+  font-weight: 500;
 }
 
 .radio {
@@ -337,6 +392,11 @@ span {
   font-weight: 400;
   line-height: 1.2;
   color: #586872;
+  outline: none;
+}
+
+.radio span:first-of-type {
+  padding-right: 0.625rem;
 }
 
 .radio input[type=radio] {
@@ -344,6 +404,7 @@ span {
 }
 
 .radio input[type=radio] + span {
+  position: relative;
   cursor: pointer;
 }
 
@@ -372,16 +433,20 @@ span {
   border-radius: 50%;
 }
 
-.radio input[type=radio]:checked + span::before {
+.radio input[type=radio] ~ .label {
+  cursor: pointer;
+}
+
+.radio input[type=radio]:not(:disabled):checked + span::before {
   border-color: #EBEBEB;
 }
 
-.radio input[type=radio]:checked + span::after {
+.radio input[type=radio]:not(:disabled):checked + span::after {
   background-color: #0098FF;
-  transform: translate(0.25rem, 0.5rem) scale(1);
+  transform: translate(4px, 9px) scale(1);
 }
 
-.radio input[type=radio]:hover + span::before {
+.radio input[type=radio]:not(:disabled):hover + span::before {
   border-color: #0098FF;
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
@@ -391,15 +456,16 @@ span {
   background-color: #F7F8F9;
 }
 
-.radio input[type=radio]:disabled + span::after {
-  background-color: #ACB4BF;
-}
-
 .radio input[type=radio]:disabled ~ .label {
   color: #ACB4BF;
 }
 
-.radio:focus input[type=radio] + span:before {
+.radio input[type=radio]:disabled:checked + span::after {
+  background-color: #ACB4BF;
+  transform: translate(4px, 9px) scale(1);
+}
+
+.radio:focus input[type=radio]:not(:disabled) + span:before {
   border-color: #0098FF;
 }
 
@@ -409,6 +475,11 @@ span {
   font-weight: 400;
   line-height: 1.2;
   color: #586872;
+  outline: none;
+}
+
+.checkbox span:first-of-type {
+  padding-right: 0.625rem;
 }
 
 .checkbox input[type=checkbox] {
@@ -431,7 +502,11 @@ span {
   vertical-align: middle;
 }
 
-.checkbox input[type=checkbox]:checked + span::after {
+.checkbox input[type=checkbox] ~ .label {
+  cursor: pointer;
+}
+
+.checkbox input[type=checkbox]:not(:disabled):checked + span::after {
   content: '';
   position: absolute;
   width: 0.75rem;
@@ -444,7 +519,7 @@ span {
   transform: translate(0.1875rem, 0.25rem) rotate(-45deg);
 }
 
-.checkbox input[type=checkbox]:hover + span::before {
+.checkbox input[type=checkbox]:not(:disabled):hover + span::before {
   border-color: #0098FF;
   box-shadow: 0 0 0.3125rem 0 rgba(0, 152, 255, 0.2);
 }
@@ -461,7 +536,7 @@ span {
   color: #ACB4BF;
 }
 
-.checkbox:focus input[type=checkbox] + span:before {
+.checkbox:focus input[type=checkbox]:not(:disabled) + span:before {
   border-color: #0098FF;
 }
 
@@ -473,6 +548,15 @@ span {
   font-weight: 400;
   line-height: 1.2;
   color: #586872;
+  outline: none;
+}
+
+.switch .label {
+  display: inline-block;
+  height: 2.188rem;
+  line-height: 2.0;
+  margin-left: 5.625rem;
+  cursor: pointer;
 }
 
 .switch input[type=checkbox] {
