--- a/src/main/resources/public/src/scss/theme/default/_elements.scss
+++ b/src/main/resources/public/src/scss/theme/default/_elements.scss
@@ -1,209 +1,81 @@
 @import "../../template/_elements.scss";
 
-body, h1, h2, h3, h4, h5, h6, input, textarea, select, button, div, span {
-    color: $element-font-color;
-    font: {
-        family: $font-family;
-        size: $font-size-base; // 16px
-    }
-}
-
 h1 {
-    @include h1();
-    padding: 0.625rem 0 0.625rem 0.3125rem; // 10px 0 10px 5px
+  @include h1();
+  padding: 0.625rem 0 0.625rem 0.3125rem; // 10px 0 10px 5px
 }
 h2 {@include h2();}
 h3 {
-    @include h3();
+  @include h3();
 }
 h4 {@include h4();}
 h5 {@include h5();}
 h6 {
-    @include h6();
-    padding: 0 0 0 0.625rem; // 10px
+  @include h6();
+  padding: 0 0 0 0.625rem; // 10px
 }
 
 h3.under-bar {
-    padding-bottom: 0.625rem; // 10px
-    margin-bottom: 0.625rem; //10px
-    border-bottom: 0.125rem solid $default-gray; // 2px
-    margin-top: 3.125rem; // 50px
-    &:first-of-type {
-        margin-top: 0;
-    }
+  padding-bottom: 0.625rem; // 10px
+  margin-bottom: 0.625rem; //10px
+  border-bottom: 0.125rem solid $default-gray; // 2px
+  margin-top: 3.125rem; // 50px
+  &:first-of-type {
+    margin-top: 0;
+  }
 }
 
 h4.under-bar {
-    padding-bottom: 0.625rem; // 10px
-    margin-bottom: 0.625rem; //10px
-    border-bottom: 0.125rem solid $default-gray; // 2px
+  padding-bottom: 0.625rem; // 10px
+  margin-bottom: 0.625rem; //10px
+  border-bottom: 0.125rem solid $default-gray; // 2px
 }
-
-span {margin: auto 0;}
 
 .picker-wrapper-date {display: inline;}
 
-option {
-    &:hover {background-color: rgba(0, 80, 255, 0.05);}
-    &:visited{color:$alice-primary;background-color: white;}
-    &:active{color:$alice-primary;}
-    &:focus{color:$alice-primary}
-}
-
-select {
-    height: 2.5rem; // 40px
-    font-size: $element-font-size;
-    border: $element-border solid $border-color;
-    border-radius: $element-border-radius;
-    padding: 0 10px;
-    margin-right: 0.0625rem; // 1px
-    vertical-align: middle;
-    background-color: $element-background-color;
-    &:focus {
-        outline: $element-border solid $alice-primary;
-        border-radius: $element-border-radius;
-    }
-    &.search-selectBox {
-    }
-}
-
 input {
-    height: 2.5rem; // 40px
-    font-size: $element-font-size;
-    border: $element-border solid $border-color;
-    border-radius: $element-border-radius;
-    padding: 0 10px;
-    margin-right: 0.0625rem; // 1px
-    vertical-align: middle;
-    background-color: $element-background-color;
-    &::placeholder {
-        color: $placeholder-color;
-    }
-    &:focus {
-        outline: $element-border solid $alice-primary;
-        border-radius: $element-border-radius;
-    }
-    &:disabled {
-        background: $light-gray;
-        color: $gray;
-    }
-    &.search {
-        background: url($icon-folder-path + "icon_search.svg") no-repeat center right;
-        background-color: $element-background-color;
-        padding-right: 1.875rem; // 30px
-    }
-    &.search-datetime {
-        background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
-        background-color: $element-background-color;
-    }
-    &.search-date {
-        background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
-        background-color: $element-background-color;
-    }
-    &.search-time {
-        background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
-        background-color: $element-background-color;
-    }
-    &.date {
-        background: url($icon-folder-path + "icon_calendar.svg") no-repeat calc(100% - 10px) 50%;
-        background-color: $element-background-color;
-    }
-    &.px {
-        background: url($icon-folder-path + "icon_px.svg") no-repeat calc(100% - 10px) 50%;
-        background-color: $element-background-color;
-    }
-    &[type=checkbox] {
-        margin-right: 0.625rem; // 10px
-        width: 1.125rem; // 18px
-        height: 1.125rem; // 18px
-        border-radius: $element-border-radius;
-        border: 0.0625rem solid $border-color; // 1px
-        &:checked {
-            background-color: $white;
-        }
-    }
-    &[type=radio] {
-        margin-right: 0.625rem; // 10px
-        height: auto;
-    }
+  padding: 0 10px;
+  margin-right: 0.0625rem; // 1px
+  vertical-align: middle;
+  &.search {
+    background: url($icon-folder-path + "icon_search.svg") no-repeat center right;
+    background-color: $element-bg-color;
+    padding-right: 1.875rem; // 30px
+  }
+  &.search-datetime {
+    background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
+    background-color: $element-bg-color;
+  }
+  &.search-date {
+    background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
+    background-color: $element-bg-color;
+  }
+  &.search-time {
+    background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
+    background-color: $element-bg-color;
+  }
+  &.date {
+    background: url($icon-folder-path + "icon_calendar.svg") no-repeat calc(100% - 10px) 50%;
+    background-color: $element-bg-color;
+  }
+  &.px {
+    background: url($icon-folder-path + "icon_px.svg") no-repeat calc(100% - 10px) 50%;
+    background-color: $element-bg-color;
+  }
 }
 
 label {
-    margin: 0.5625rem 0 0.5625rem 0; // 5px 0 5px 0
-    color: $light-black;
+  margin: 0.5625rem 0 0.5625rem 0; // 5px 0 5px 0
+  color: $light-black;
 }
 
 textarea{
-    padding: 0.5rem 0.625rem; // 8px 10px
-    display: block;
-    border: 0.0625rem solid $border-color; // 1px
-    border-radius: $element-border-radius;
-    background-color: $element-background-color;
-    font-size: $element-font-size;
-    resize: vertical;
-    line-height: 1.3;
-    &:focus {
-        outline: $element-border solid $alice-primary;
-        border-radius: $element-border-radius;
-    }
+  display: block;
+  padding: 0.5rem 0.625rem; // 8px 10px
+  resize: vertical;
+  line-height: 1.3;
 }
 
-// switch 요소 디자인
 .switch {
-    position: relative;
-    height: 25px;
-    margin: 1.875rem 0 1.25rem 0; // 30px 0 20px 0
-    input {
-        display: none;
-        &:checked + .slider {
-            background-color: #0050ff;
-
-            &:before {
-                -webkit-transform: translateX(33px);
-                transform: translateX(33px);
-            }
-        }
-
-        &:focus + .slider {
-            -webkit-box-shadow: 0 0 1px #707579;
-            box-shadow: 0 0 1px #707579;
-        }
-    }
-    .slider.round {
-        border-radius: 34px;
-        width: 60px;
-        &::before {
-            border-radius: 50%;
-        }
-    }
-
-    .switch-label {
-        vertical-align: -4px;
-        color: $dark-gray;
-        font-weight: 400;
-        margin-left: 70px;
-    }
-    .slider {
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #ccc;
-        -webkit-transition: .4s;
-        transition: .4s;
-
-        &:before {
-            position: absolute;
-            content: "";
-            height: 17px;
-            width: 17px;
-            left: 4px;
-            bottom: 4px;
-            background-color: rgba(255, 255, 255, 1);
-            -webkit-transition: .4s;
-            transition: .4s;
-        }
-    }
+  margin: 1.875rem 0 1.25rem 0; // 30px 0 20px 0
 }
