--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -1,49 +1,23 @@
 // Variables
-
 // font family
-$font-face-map: (
-    "NotoSansKR-Thin.otf":                    100,
-    "NotoSansKR-Light.otf":                   300,
-    "NotoSansKR-Regular.otf":                 400,
-    "NotoSansKR-Medium.otf":                  500,
-    "NotoSansKR-Bold.otf":                    700,
-    "NotoSansKR-Black.otf":                   900
-);
-$font-folder-path:                            "../fonts";
-$font-family:                                 "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
+$font-family:                                 "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif; 
+
+// font size
 $font-size-base:                              1rem;  // 16px
 
-$icon-folder-path: "../media/icons/";
-$image-folder-path: "../media/images/";
+$icon-folder-path:                            '../media/icons/';
+$image-folder-path:                           '../media/images/';
+
+// DOM Elements
+$element-font-size:                           1rem; // 16px
+$element-font-color:                          $dark-gray;
+$element-font-weight:                         $font-weight-regular;
+$element-bg-color:                            $white;
+$element-border-color:                        $line-gray;
+$element-border-width:                        0.0625rem; // 1px
+$element-border-radius:                       0.0625rem; // 1px
+
 $alice-primary:#0050ff !default;
-
-// Color palette
-// 실제 색상코드는 여기에만 등록한다.
-$black:                                       #000000;
-$white:                                       #ffffff;
-$red:                                         #FF405A;
-$orange:                                      #FF7319;
-$green:                                       #00C462;
-$focus-black:                                 #283238;
-$ground-black:                                #333D47;
-$light-black:                                 #3F4B56;
-$dark-gray:                                   #586872;
-$warm-gray:                                   #7E848C;
-$blue-gray:                                   #929AA6;
-$gray:                                        #ACB4BF;
-$pressed-gray:                                #CCCED1;
-$default-gray:                                #E1E3E6;
-$line-gray:                                   #EBEBEB;
-$light-gray:                                  #F7F8F9;
-$dark-blue:                                   #0060A5;
-$pressed-blue:                                #0088E6;
-$point-blue:                                  #0098FF;
-$hover-blue:                                  #33ADFF;
-$light-blue:                                  #87CEFF;
-
-$color-line: $line-gray;
-$color-title: #3E4752;
-$color-text: #67717F;
 
 // 메뉴 로고
 $logo-width: 13.75rem; // 220px
@@ -63,19 +37,6 @@ $menu-bg-hover: $focus-black;
 $menu-color: $blue-gray;
 $menu-selected-color: $white;
 $menu-hover: $blue-gray;
-
-// DOM Elements
-$border-color: $line-gray;
-$placeholder-color: $gray;
-
-$element-background-color: #FFFFFF;
-$element-line: $color-line;
-$element-border: 0.0625rem; // 1px
-$element-border-radius: 0.0625rem; // 1px
-$element-font-size: 1rem; // 16px
-$element-font-color: $dark-gray;
-$placeholder-color: $gray;
-
 $menu-font: 1rem; // 16px;
 
 // Column width
