--- a/src/main/resources/public/src/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/src/scss/theme/default/itsm.scss
@@ -14,6 +14,7 @@
 @import '_fonts.scss';
 @import '_mixin.scss';
 @import '_elements.scss';
+// TODO 아래 순서 정리
 @import '_column.scss';
 @import '_container.scss';
 @import '_gnb.scss';
