--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -24,15 +24,19 @@
             <div class="form-set">
                 <label class="required" th:text="#{customCode.label.type}"></label>
                 <div class="radio-row">
-                    <label>
+                    <label class="radio" for="table" tabindex="0">
                         <input id="table" name="type" type="radio"
                                th:checked="${customCode?.type == null || customCode?.type == 'table'}"
-                               th:text="#{customCode.label.table}" onclick="changeContainer('table')">
+                               onclick="changeContainer('table')">
+                        <span></span>
+                        <span class="label" th:text="#{customCode.label.table}"></span>
                     </label>
-                    <label>
+                    <label class="radio" for="code" tabindex="0">
                         <input id="code" name="type" type="radio"
                                th:checked="${customCode?.type == 'code'}"
-                               th:text="#{customCode.label.code}" onclick="changeContainer('code')">
+                               onclick="changeContainer('code')">
+                        <span></span>
+                        <span class="label" th:text="#{customCode.label.code}"></span>
                     </label>
                 </div>
             </div>
