#8919 입력, 검색화면 열면 적당 위치에 포커싱 관련 일감 MR 응대

--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -36,6 +36,7 @@
             addThumbnail(/*[[${image}]]*/);
             /*[/]*/
             addThumbnailUpload();
+            document.getElementById('searchValue').focus();
         }
 
         function addThumbnail(image) {
