--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -39,6 +39,7 @@
         const offsetSize = 15;
 
         window.onload = function () {
+            document.getElementById('search').focus();
             document.getElementById('fromDt').value = i18n.getDate({'months':-1});
             document.getElementById('searchToDt').value = i18n.getDate();
             dateTimePicker.initDatePicker('fromDt', setDatePicker);
